# Fastapi-for-learner

fast_API/: 01_first.py  02_second.py  03_third.py  04_fourth.py  05_post_method.py  auth.py  practice.py  temp.html
fast_API/authentication_authriz/: auth.py  lld_demo.html  main_2.py  models.py  pyproject.toml  test.ipynb
temp_auth/: auth.py  main.py  prod_400_bot7.json  pyproject.toml  schemas.py  temp.html  temp.json
