[tool.poetry]
name = "auth-test"
version = "0.1.0"
description = ""
authors = ["mangesh-rejolut <mangesh.s@rejolut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jwt = "^1.3.1"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
